@@ -3,6 +3,7 @@
 
 \section c018 version 0.17 -> 0.17+
 
+ - Allow memory sizes over 1 GB. (02-mar-2008, Brian Wheeler)
  - Natural way to specify large numeric values ("10M") in the
    config file. (02-mar-2008, Camiel vanderhoeven)
  - Add BREAKPOINT INSTRUCTION command to IDB. (29-feb-2008, Brian
